@@ -85,7 +85,7 @@ function createCounter(writer) {
 }
 
 test('Parse elements', function() {
-	expect(42);
+	expect(44);
 
 	var counter = createCounter(writer);
 	var parser = new tinymce.html.SaxParser(counter, schema);
@@ -233,6 +233,13 @@ test('Parse elements', function() {
 	parser.parse('<p>a</p><p /><p>b</p>');
 	equals(writer.getContent(), '<p>a</p><p></p><p>b</p>', 'Parse invalid closed element.');
 	deepEqual(counter.counts, {text: 2, start: 3, end: 3}, 'Parse invalid closed element counts.');
+
+	var counter = createCounter(writer);
+	var parser = new tinymce.html.SaxParser(counter, schema);
+	writer.reset();
+	parser.parse('<br><br /><br/>');
+	equals(writer.getContent(), '<br /><br /><br />', 'Parse short ended elements.');
+	deepEqual(counter.counts, {start: 3}, 'Parse short ended elements counts.');
 });
 
 test('Parse style elements', function() {
